--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!----------------------상단---------------------->
     <header>
         <div class="wrap">
-            <h1 class="h1">BeomJik's World</h1>
+            <h1 class="h1"><a href="https://boeomjik.github.io/portfolio/">BeomJik's World</a></h1>
             <ul class="gnb">
                 <li><a href="" class="home">HOME</a></li>
                 <li><a href="" class="about">ABOUT ME</a></li>
