--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
                             <span class="btControl">
                                 <a href="" class="previewBt">미리보기</a>
-                                <a href="https://boeomjik.github.io/pf7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                <a href="https://beomjik.github.io/pf7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                             </span>
                         </div>
                     </li>
@@ -155,7 +155,7 @@
                             <p class="p">사용 툴 : VS Code, Sass</p>
                             <span class="btControl">
                                 <a href="" class="previewBt">미리보기</a>
-                                <a href="https://boeomjik.github.io/pf6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                <a href="https://beomjik.github.io/pf6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                             </span>
                         </div>
                     </li>
@@ -167,7 +167,7 @@
                             <p class="p">사용 툴 : VS Code, Sass</p>
                             <span class="btControl">
                                 <a href="" class="previewBt">미리보기</a>
-                                <a href="https://boeomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                <a href="https://beomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                             </span>
                         </div>
                     </li>
@@ -179,7 +179,7 @@
                             <p class="p">사용 툴 : VS Code, Sass</p>
                             <span class="btControl">
                                 <a href="" class="previewBt">미리보기</a>
-                                <a href="https://boeomjik.github.io/pfp2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                <a href="https://beomjik.github.io/pfp2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                             </span>
                         </div>
                     </li>
@@ -192,7 +192,7 @@
                             <p class="p">사용 툴 : VS Code, Sass</p>
                             <span class="btControl">
                                 <a href="" class="previewBt">미리보기</a>
-                                <a href="https://boeomjik.github.io/pf5/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                <a href="https://beomjik.github.io/pf5/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                             </span>
                         </div>
                     </li>
@@ -204,7 +204,7 @@
                             <p class="p">사용 툴 : VS Code, Sass</p>
                             <span class="btControl">
                                 <a href="" class="previewBt">미리보기</a>
-                                <a href="https://boeomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                <a href="https://beomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                             </span>
                         </div>
                     </li>    
