--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link rel="stylesheet" href="css/footer.css" type="text/css">
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="css/swiper-arrow.css" type="text/css">
     <!-- 제이쿼리 자바스크립트 라이브러리 -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"> </script>
+    <!-- 스위퍼 css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <!-- 스위퍼 JS --> 
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>    
     <!-- js -->
     <script src="js/personal.js"></script>
     <!-- 페이지 스크롤링 -->
@@ -132,83 +137,141 @@
                     <li><a href="" class="filterResponsive">반응형</a></li>
                     <li><a href="" class="filterJquery">jQuery</a></li>
                 </ul>
-                <ul class="list">
-                    <li class="pf7" data-n="7">
-                        <div class="screen">
-                            <h3 class="h3">윤현몰 코딩</h3>
-                            <p class="p">메인 페이지 구현</p> 
-                            <p class="p">(PC, 모바일 반응형)</p>
-                            <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                            <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
-                            <span class="btControl">
-                                <a href="" class="previewBt">미리보기</a>
-                                <a href="https://beomjik.github.io/pf7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                            </span>
-                        </div>
-                    </li>
-                    <li class="pf6" data-n="6">
-                        <div class="screen">
-                            <h3 class="h3">브랜드엑스<br>홈페이지 코딩</h3>
-                            <p class="p">메인 페이지 구현</p> 
-                            <p class="p">(PC, 모바일 반응형)</p>
-                            <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                            <p class="p">사용 툴 : VS Code, Sass</p>
-                            <span class="btControl">
-                                <a href="" class="previewBt">미리보기</a>
-                                <a href="https://beomjik.github.io/pf6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                            </span>
-                        </div>
-                    </li>
-                    <li class="pfp3" data-n="p3">
-                        <div class="screen">
-                            <h3 class="h3">달콤커피 코딩</h3>
-                            <p class="p">메인 페이지 구현</p> 
-                            <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                            <p class="p">사용 툴 : VS Code, Sass</p>
-                            <span class="btControl">
-                                <a href="" class="previewBt">미리보기</a>
-                                <a href="https://beomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                            </span>
-                        </div>
-                    </li>
-                    <li class="pfp2" data-n="p2">
-                        <div class="screen">
-                            <h3 class="h3">풍림무약</h3>
-                            <p class="p">메인 페이지, 서브 페이지(4) 구현</p> 
-                            <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                            <p class="p">사용 툴 : VS Code, Sass</p>
-                            <span class="btControl">
-                                <a href="" class="previewBt">미리보기</a>
-                                <a href="https://beomjik.github.io/pfp2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                            </span>
-                        </div>
-                    </li>
-                    <li class="pf5" data-n="5">
-                        <div class="screen">
-                            <h3 class="h3">삼성전자<br>회사소개 코딩</h3>
-                            <p class="p">메인 페이지, 서브 페이지(8) 구현</p> 
-                            <p class="p">(PC, 모바일 반응형)</p>
-                            <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                            <p class="p">사용 툴 : VS Code, Sass</p>
-                            <span class="btControl">
-                                <a href="" class="previewBt">미리보기</a>
-                                <a href="https://beomjik.github.io/pf5/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                            </span>
-                        </div>
-                    </li>
-                    <li class="pf4" data-n="4">
-                        <div class="screen">
-                            <h3 class="h3">한진칼 리뉴얼 코딩</h3>
-                            <p class="p">(PC, 모바일 반응형)</p>
-                            <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                            <p class="p">사용 툴 : VS Code, Sass</p>
-                            <span class="btControl">
-                                <a href="" class="previewBt">미리보기</a>
-                                <a href="https://beomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                            </span>
-                        </div>
-                    </li>    
-                </ul>
+                <div class="btnA">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <ul class="list swiper-slide">
+                            <li class="pf8" data-n="8">
+                                <div class="screen">
+                                    <h3 class="h3">카페24</h3>
+                                    <p class="p">카페24를 이용한 홈페이지 제작</p>
+                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                    <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://beomjik0201.cafe24.com" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li> 
+                            <li class="pf7" data-n="7">
+                                <div class="screen">
+                                    <h3 class="h3">윤현몰 코딩</h3>
+                                    <p class="p">메인 페이지 구현</p>
+                                    <p class="p">(PC, 모바일 반응형)</p>
+                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                    <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://boeomjik.github.io/pfp7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>
+                            <li class="pf6" data-n="6">
+                                <div class="screen">
+                                    <h3 class="h3">브랜드엑스<br>홈페이지 코딩</h3>
+                                    <p class="p">메인 페이지 구현</p>
+                                    <p class="p">(PC, 모바일 반응형)</p>
+                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                    <p class="p">사용 툴 : VS Code, Sass</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://boeomjik.github.io/pfp6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>
+                            <li class="pfp3" data-n="p3">
+                                <div class="screen">
+                                    <h3 class="h3">달콤커피 코딩</h3>
+                                    <p class="p">메인 페이지 구현</p>
+                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                    <p class="p">사용 툴 : VS Code, Sass</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://boeomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>
+                            <li class="pfp2" data-n="p2">
+                                <div class="screen">
+                                    <h3 class="h3">풍림무약</h3>
+                                    <p class="p">메인 페이지, 서브 페이지(1) 구현</p> 
+                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                    <p class="p">사용 툴 : VS Code, Sass</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="http://jik0201.woobi.co.kr/pfp2/index.php" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>                    
+                            <li class="pf5" data-n="5">
+                                <div class="screen">
+                                    <h3 class="h3">삼성전자<br>회사소개 코딩</h3>
+                                    <p class="p">메인 페이지, 서브 페이지(8) 구현</p> 
+                                    <p class="p">(PC, 모바일 반응형)</p>
+                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                    <p class="p">사용 툴 : VS Code, Sass</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="http://jik0201.woobi.co.kr/pf5/index.php" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                        <ul class="list swiper-slide">
+                           <li class="pf4" data-n="4">
+                                <div class="screen">
+                                    <h3 class="h3">한진칼 리뉴얼 코딩</h3>
+                                    <p class="p">(PC, 모바일 반응형)</p>
+                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                    <p class="p">사용 툴 : VS Code, Sass</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://boeomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>
+                            <li class="pf3" data-n="3">
+                                <div class="screen">
+                                    <h3 class="h3">투썸플레이스<br> 홈페이지 코딩</h3>
+                                    <p class="p">메인 페이지 구현</p> 
+                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                    <p class="p">사용 툴 : VS Code, Sass</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://boeomjik.github.io/pf3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>    
+                            <li class="pf2" data-n="2">
+                                <div class="screen">
+                                    <h3 class="h3">제주항공 홈페이지 코딩</h3>
+                                    <p class="p">메인 페이지 구현</p> 
+                                    <p class="p">사용 기술 : Html5, Css3</p>
+                                    <p class="p">사용 툴 : VS Code</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://boeomjik.github.io/pf2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>    
+                            <li class="pf1" data-n="1">
+                                <div class="screen">
+                                    <h3 class="h3">한진칼 코딩</h3>
+                                    <p class="p">메인 페이지 구현</p> 
+                                    <p class="p">사용 기술 : Html5, Css3</p>
+                                    <p class="p">사용 툴 : VS Code</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://boeomjik.github.io/pf1/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- 컨택트 -->
