--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <ul class="list swiper-slide">
                            <li class="pf4" data-n="4">
                                 <div class="screen">
-                                    <h3 class="h3">한진칼 리뉴얼 코딩</h3>
+                                    <h3 class="h3">한진칼 홈페이지 <br> 리뉴얼 코딩</h3>
                                     <p class="p">(PC, 모바일 반응형)</p>
                                     <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                     <p class="p">사용 툴 : VS Code, Sass</p>
@@ -259,7 +259,7 @@
                             </li>    
                             <li class="pf1" data-n="1">
                                 <div class="screen">
-                                    <h3 class="h3">한진칼 코딩</h3>
+                                    <h3 class="h3">한진칼 홈페이지 <br> 코딩</h3>
                                     <p class="p">메인 페이지 구현</p> 
                                     <p class="p">사용 기술 : Html5, Css3</p>
                                     <p class="p">사용 툴 : VS Code</p>
