--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             </li> 
                             <li class="pf7" data-n="7">
                                 <div class="screen">
-                                    <h3 class="h3">윤현몰 코딩</h3>
+                                    <h3 class="h3">윤현몰<br>홈페이지 코딩</h3>
                                     <p class="p">메인 페이지 구현</p>
                                     <p class="p">(PC, 모바일 반응형)</p>
                                     <p class="p">사용 기술 : Html5, Css3, jQuery</p>
@@ -184,7 +184,7 @@
                             </li>
                             <li class="pfp3" data-n="p3">
                                 <div class="screen">
-                                    <h3 class="h3">달콤커피 코딩</h3>
+                                    <h3 class="h3">달콤커피<br>홈페이지 코딩</h3>
                                     <p class="p">메인 페이지 구현</p>
                                     <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                     <p class="p">사용 툴 : VS Code, Sass</p>
@@ -196,7 +196,7 @@
                             </li>
                             <li class="pfp2" data-n="p2">
                                 <div class="screen">
-                                    <h3 class="h3">풍림무약</h3>
+                                    <h3 class="h3">풍림무약<br>홈페이지 코딩</h3>
                                     <p class="p">메인 페이지, 서브 페이지(5) 구현</p> 
                                     <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                     <p class="p">사용 툴 : VS Code, Sass</p>
@@ -223,7 +223,7 @@
                         <ul class="list swiper-slide">
                            <li class="pf4" data-n="4">
                                 <div class="screen">
-                                    <h3 class="h3">한진칼 홈페이지 <br> 리뉴얼 코딩</h3>
+                                    <h3 class="h3">한진칼 홈페이지<br>리뉴얼 코딩</h3>
                                     <p class="p">(PC, 모바일 반응형)</p>
                                     <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                     <p class="p">사용 툴 : VS Code, Sass</p>
@@ -235,7 +235,7 @@
                             </li>
                             <li class="pf3" data-n="3">
                                 <div class="screen">
-                                    <h3 class="h3">투썸플레이스<br> 홈페이지 코딩</h3>
+                                    <h3 class="h3">투썸플레이스<br>홈페이지 코딩</h3>
                                     <p class="p">메인 페이지 구현</p> 
                                     <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                     <p class="p">사용 툴 : VS Code, Sass</p>
@@ -247,7 +247,7 @@
                             </li>    
                             <li class="pf2" data-n="2">
                                 <div class="screen">
-                                    <h3 class="h3">제주항공 홈페이지 코딩</h3>
+                                    <h3 class="h3">제주항공<br>홈페이지 코딩</h3>
                                     <p class="p">메인 페이지 구현</p> 
                                     <p class="p">사용 기술 : Html5, Css3</p>
                                     <p class="p">사용 툴 : VS Code</p>
@@ -259,7 +259,7 @@
                             </li>    
                             <li class="pf1" data-n="1">
                                 <div class="screen">
-                                    <h3 class="h3">한진칼 홈페이지 <br> 코딩</h3>
+                                    <h3 class="h3">한진칼<br>홈페이지 코딩</h3>
                                     <p class="p">메인 페이지 구현</p> 
                                     <p class="p">사용 기술 : Html5, Css3</p>
                                     <p class="p">사용 툴 : VS Code</p>
