--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </li>
                         <li>
                             <h4 class="h3">JS</h4>
-                            <p class="p"></p>
+                            <p class="p">하</p>
                         </li>
                     </ul>
                     <h3 class="h3">I can do this too</h3>
