--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                     <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="https://boeomjik.github.io/pfp7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pf7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>
@@ -178,7 +178,7 @@
                                     <p class="p">사용 툴 : VS Code, Sass</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="https://boeomjik.github.io/pfp6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pf6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>
@@ -190,7 +190,7 @@
                                     <p class="p">사용 툴 : VS Code, Sass</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="https://boeomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>
@@ -229,7 +229,7 @@
                                     <p class="p">사용 툴 : VS Code, Sass</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="https://boeomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>
@@ -241,7 +241,7 @@
                                     <p class="p">사용 툴 : VS Code, Sass</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="https://boeomjik.github.io/pf3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pf3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>    
@@ -265,7 +265,7 @@
                                     <p class="p">사용 툴 : VS Code</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="https://boeomjik.github.io/pf1/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pf1/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>
