--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                     <p class="p">사용 툴 : VS Code</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="https://boeomjik.github.io/pf2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pf2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>    
