--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!----------------------상단---------------------->
     <header>
         <div class="wrap">
-            <h1 class="h1"><a href="https://boeomjik.github.io/portfolio/">BeomJik's World</a></h1>
+            <h1 class="h1"><a href="https://beomjik.github.io/portfolio/">BeomJik's World</a></h1>
             <ul class="gnb">
                 <li><a href="" class="home">HOME</a></li>
                 <li><a href="" class="about">ABOUT ME</a></li>
@@ -107,7 +107,7 @@
                         </li>
                         <li>
                             <h4 class="h3">JS</h4>
-                            <p class="p">하</p>
+                            <p class="p">기초</p>
                         </li>
                     </ul>
                     <h3 class="h3">I can do this too</h3>
