--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         학력 : 경민대학교 정보통신과 중퇴<br>
                         수료 내역 : 종로 그린컴퓨터 학원 <br>
                         자격증 : ITQ 한글, 엑셀, 파워포인트<br>
-                        장접 : 리더쉽, 이해력, 습득력<br>
+                        장 : 리더쉽, 이해력, 습득력<br>
                         취미 : 복싱, 맛집 찾기, 음악 듣기 <br>
                         특기 : 노래 부르기, 달리기, 리더쉽 <br>
                     </p>
@@ -99,15 +99,12 @@
                     <ul class="skills">
                         <li>
                             <h4 class="h3">HTML5</h4>
-                            <p class="p">중상</p>
                         </li>
                         <li>
                             <h4 class="h3">CSS3</h4>
-                            <p class="p">중상</p>
                         </li>
                         <li>
                             <h4 class="h3">JS</h4>
-                            <p class="p">기초</p>
                         </li>
                     </ul>
                     <h3 class="h3">I can do this too</h3>
@@ -290,7 +287,7 @@
                         <h3 class="h3">SNS</h3>
                         <p class="p">Kakao Talk : <a href="https://open.kakao.com/o/s1XdEN2d" target="blink" title="클릭하면 이동합니다"></a></p>
                         <p class="p">Instagram : <a href="https://www.instagram.com/beomjik_0201/" target="blink" title="클릭하면 이동합니다"></a></p>
-                        <p class="p">Face Book : <a href="https://www.facebook.com/profile.php?id=100003996336010" target="blink" title="클릭하면 이동합니다"></a></p>
+                        <p class="p">Git Hub : <a href="https://github.com/BeomJik" target="blink" title="클릭하면 이동합니다"></a></p>
                     </div>
                 </div>
             </div>
