--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <h4 class="h3">Oven</h4>
                         </li>
                         <li>
-                            <h4 class="h3">Potoshop</h4>
+                            <h4 class="h3">Bootstrap</h4>
                         </li>
                     </ul>
                 </div>
