--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         수료 내역 : [스마트혼합]프론트엔드 개발자로<br> 
                         가는 UI/UX반응형 웹디자인&웹퍼블리셔<br>
                         자격증 : ITQ 한글, 엑셀, 파워포인트<br>
-                        장접 : 리더쉽, 이해력, 습득력<br>
+                        장점 : 리더쉽, 이해력, 습득력<br>
                         취미 : 복싱, 맛집 찾기, 음악 듣기<br>
                         특기 : 노래 부르기, 달리기, 리더쉽<br>
                     </p>
