--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                                 <div class="screen">
                                     <h3 class="h3">풍림무약<br>홈페이지 코딩</h3>
                                     <p class="p">메인 페이지, 서브 페이지(5) 구현</p> 
+                                    <p class="p">(PC, 모바일 반응형)</p>
                                     <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                     <p class="p">사용 툴 : VS Code, Sass</p>
                                     <span class="btControl">
