--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                            <li class="pf4" data-n="4">
                                 <div class="screen">
                                     <h3 class="h3">한진칼 홈페이지<br>리뉴얼 코딩</h3>
-                                    <p class="p">메인 페이지</p> 
+                                    <p class="p">메인 페이지 구현</p> 
                                     <p class="p">(PC, 모바일 반응형)</p>
                                     <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                     <p class="p">사용 툴 : VS Code, Sass</p>
