--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                     <p class="p">사용 툴 : VS Code, Sass</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="http://jik0201.woobi.co.kr/pfp2/index.php" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pfp2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>                    
@@ -214,7 +214,7 @@
                                     <p class="p">사용 툴 : VS Code, Sass</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="http://jik0201.woobi.co.kr/pf5/index.php" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="https://beomjik.github.io/pf5/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li>
