skils photoshop 추가

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="wrap">
                 <h2 class="h2 subject">SKILLS</h2>
                 <div class="wrapin">
-                    <h3 class="h3">I can do</h3>
+                    <!-- <h3 class="h3">I can do</h3> -->
                     <ul class="skills">
                         <li>
                             <h4 class="h3">HTML5</h4>
@@ -108,7 +108,7 @@
                             <h4 class="h3">JS</h4>
                         </li>
                     </ul>
-                    <h3 class="h3">I can do this too</h3>
+                    <!-- <h3 class="h3">I can do this too</h3> -->
                     <ul class="tool">
                         <li>
                             <h4 class="h3">VS Code</h4>
@@ -117,7 +117,7 @@
                             <h4 class="h3">Sass</h4>
                         </li>
                         <li>
-                            <h4 class="h3">Oven</h4>
+                            <h4 class="h3">Photoshop</h4>
                         </li>
                         <li>
                             <h4 class="h3">Bootstrap</h4>
