add new portfolio

--- a/index.html
+++ b/index.html
@@ -142,12 +142,23 @@
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <ul class="list swiper-slide">
+                            <li class="pf9" data-n="9">
+                                <div class="screen">
+                                    <h3 class="h3">강의하는 사람들</h3>
+                                    <p class="p">사용 기술 : Html5, Css3, Js</p>
+                                    <p class="p">(모바일 전용)</p>
+                                    <p class="p"> 기여도 : 퍼블리싱 100%</p>
+                                    <p class="p"> 소요기간 : 5일</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://beomjik0201.cafe24.com" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li> 
                             <li class="pf8" data-n="8">
                                 <div class="screen">
                                     <h3 class="h3">카페24</h3>
                                     <p class="p">카페24를 이용한 홈페이지 제작</p>
-                                    <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                                    <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
                                         <a href="https://beomjik0201.cafe24.com" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
