--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <ul class="filterBt">
                     <li><a href="" class="filterAll">All</a></li>
                     <li><a href="" class="filterResponsive">반응형</a></li>
-                    <li><a href="" class="filterJquery">jQuery</a></li>
+                    <li><a href="" class="filterJs">Js</a></li>
                 </ul>
                 <div class="btnA">
                     <div class="swiper-button-next"></div>
