fixed portfolio  index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                     <p class="p"> 소요기간 : 5일</p>
                                     <span class="btControl">
                                         <a href="" class="previewBt">미리보기</a>
-                                        <a href="https://beomjik0201.cafe24.com" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                        <a href="http://gangsa.miwpaw.com/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
                             </li> 
