이메일, 전화번호 수정

--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
                     <div class="ad"> 
                         <h3 class="h3" title="클릭하면 내려옵니다">INFO</h3>
                         <p class="p">Address : <a href="https://url.kr/ulvs8r" target="blink" title="클릭하면 이동합니다">고양시 덕양구 주교동</a></p>
-                        <p class="p">E-Mail : <span>qjarmsrkt0201@gmail.com</span></p>
-                        <p class="p">Phone : <span>010 4431 8454</span></p>
+                        <p class="p">E-Mail : <a href="mailto:qjarmsrkt0201@gmail.com">qjarmsrkt0201@gmail.com</a></p>
+                        <p class="p">Phone : <a href="tel:+821044318454">010-4431-8454</a></p>
                     </div>
                     <div class="sns">
                         <h3 class="h3">SNS</h3>
