--- a/index.html
+++ b/index.html
@@ -142,6 +142,17 @@
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <ul class="list swiper-slide">
+                            <li class="pfp4" data-n="p4">
+                                <div class="screen">
+                                    <h3 class="h3">todo-list</h3>
+                                    <p class="p">HTML, css, sass, javascript</p>
+                                    <p class="p">openweather api를 이용했습니다</p>
+                                    <span class="btControl">
+                                        <a href="" class="previewBt">미리보기</a>
+                                        <a href="https://beomjik.github.io/todo-list/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    </span>
+                                </div>
+                            </li>                
                             <li class="pf9" data-n="9">
                                 <div class="screen">
                                     <h3 class="h3">강의하는 사람들</h3>
@@ -203,6 +214,9 @@
                                     </span>
                                 </div>
                             </li>
+                               
+                        </ul>
+                        <ul class="list swiper-slide">
                             <li class="pfp2" data-n="p2">
                                 <div class="screen">
                                     <h3 class="h3">풍림무약<br>홈페이지 코딩</h3>
@@ -215,9 +229,7 @@
                                         <a href="https://beomjik.github.io/pfp2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                     </span>
                                 </div>
-                            </li>                    
-                        </ul>
-                        <ul class="list swiper-slide">
+                            </li>                
                             <li class="pf5" data-n="5">
                                 <div class="screen">
                                     <h3 class="h3">삼성전자<br>회사소개 코딩</h3>
