타이핑 효과 추가

--- a/index.html
+++ b/index.html
@@ -33,22 +33,19 @@
     <link rel="stylesheet" href="css/footer.css" type="text/css">
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
     <link rel="stylesheet" href="css/swiper-arrow.css" type="text/css">
+    <link rel="stylesheet" href="css/typing.css">
     <!-- 제이쿼리 자바스크립트 라이브러리 -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"> </script>
     <!-- 스위퍼 css -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <!-- 스위퍼 JS --> 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>    
-    <!-- js -->
-    <script src="js/personal.js"></script>
-    <!-- 페이지 스크롤링 -->
-    <script src="js/fageScrolling.js"></script>
 </head>
 <body>
     <!----------------------상단---------------------->
     <header>
         <div class="wrap">
-            <h1 class="h1"><a href="https://beomjik.github.io/portfolio/">BeomJik's World</a></h1>
+            <h1 class="h1"><a class="text" href="https://beomjik.github.io/portfolio/"></a></h1>
             <ul class="gnb">
                 <li><a href="" class="home">HOME</a></li>
                 <li><a href="" class="about">ABOUT ME</a></li>
@@ -346,5 +343,10 @@
         <p class="copy">Copyright © 2022 BeomJik.</p>      
         <a href="" class="top">상단이동</a>
     </footer>
+    <!-- js -->
+    <script src="js/personal.js"></script>
+    <!-- 페이지 스크롤링 -->
+    <script src="js/fageScrolling.js"></script>
+    <script src="js/typing.js"></script>
 </body>
 </html>
